# libad9166-iio

./: CMakeLists.txt  README.md  ad9166.c  ad9166.h  azure-pipelines.yml  libad9166-iio.iss.cmakein
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/scripts/: create_debian.sh
.github/workflows/: build.yaml
CI/: build_win.ps1  generate_exe.ps1  publish_deps.ps1
CI/azure/: prepare_assets.sh
CI/travis/: ci-linux.sh  ci-ubuntu.sh
bindings/python/: CMakeLists.txt  ad9166.py  pyproject.toml.cmakein  requirements_dev.txt  tasks.py
bindings/python/test/: test_ad9166.py
packaging/debian/: changelog  control  copyright  rules
test/: CMakeLists.txt  ad9166_calibrate.c
